# larmip-ais

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: container.yaml
src/larmip_ais/: AssignFP.py  ReadFingerprint.py  cli.py  larmip_icesheet_fit.py  larmip_icesheet_postprocess.py  larmip_icesheet_preprocess.py  larmip_icesheet_project.py
