[project]
name = "larmip-ais"
version = "0.1.0"
description = "This module ports into the FACTS framework the Antatctic dynamic contribution emulation of the Linear response of the Antarctic ice sheet to future warming Model Intercomparision Project (LARMIP) 2020. It augments it with a surface mass balance term following IPCC AR5."
readme = "README.md"
authors = [
    { name = "Emma Marshall", email = "emarshall@rhg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "dask>=2025.11.0",
    "h5py==3.14.0",
    "netcdf4==1.7.2",
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "xarray>=2025.11.0",
]

[project.scripts]
larmip-ais = "larmip_ais.cli:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
